--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".screens.map.MapsActivity" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <import type="android.view.View"/>
+
+        <variable
+            name="viewModel"
+            type="com.example.admin.screens.map.MapViewModel"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".screens.map.MapsActivity">
+
+        <View
+            android:id="@+id/toolbar_vw"
+            android:background="@color/white"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/toolbar_height"/>
+
+        <TextView
+            android:id="@+id/distance_tv"
+            android:text="Distancia"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_vw"
+            app:layout_constraintBottom_toTopOf="@+id/distance_spinner"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/network_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/network_tv"
+            android:text="Red"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_vw"
+            app:layout_constraintBottom_toTopOf="@+id/network_spinner"
+            app:layout_constraintLeft_toRightOf="@+id/distance_spinner"
+            app:layout_constraintRight_toLeftOf="@+id/bank_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/bank_tv"
+            android:text="Banco"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="@+id/toolbar_vw"
+            app:layout_constraintBottom_toTopOf="@+id/bank_spinner"
+            app:layout_constraintLeft_toRightOf="@+id/network_spinner"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Spinner
+            android:id="@+id/distance_spinner"
+            android:elevation="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/distance_tv"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar_vw"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/network_spinner"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"/>
+
+        <Spinner
+            android:id="@+id/network_spinner"
+            android:elevation="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/network_tv"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar_vw"
+            app:layout_constraintLeft_toRightOf="@+id/distance_spinner"
+            app:layout_constraintRight_toLeftOf="@+id/bank_spinner"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"/>
+
+        <Spinner
+            android:id="@+id/bank_spinner"
+            android:elevation="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/bank_tv"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar_vw"
+            app:layout_constraintLeft_toRightOf="@+id/network_spinner"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"/>
+
+        <fragment
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            tools:context=".screens.map.MapsActivity"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            map:layout_constraintTop_toBottomOf="@+id/toolbar_vw" />
+
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:indeterminate="true"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
