--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/distance_tv"
-            android:text="Distancia"
+            android:text="Distancia (m)"
             android:elevation="4dp"
             app:layout_constraintTop_toTopOf="@+id/toolbar_vw"
             app:layout_constraintBottom_toTopOf="@+id/distance_spinner"
