--- a/app/src/main/res/layout/activity_health_services.xml
+++ b/app/src/main/res/layout/activity_health_services.xml
@@ -17,6 +17,18 @@
         android:layout_height="match_parent"
         tools:context=".screens.health_services.HealthServicesActivity">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/services_rv"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/health_service_item"/>
+
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
