--- a/app/src/main/res/layout/health_service_item.xml
+++ b/app/src/main/res/layout/health_service_item.xml
@@ -36,6 +36,20 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Hospital posadas" />
 
+            <TextView
+                android:id="@+id/service_address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@{service.address}"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/service_name"
+                tools:text="Av. Paseo Colon 290" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
