Add forgot password, home and filter screens

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,41 +7,42 @@
 
         <import type="android.view.View" />
 
-        <variable
-            name="viewModel"
-            type="com.example.admin.screens.login.LoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.login.LoginActivity">
+        tools:context=".screens.forgot_password.ForgotPasswordActivity">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/health_icon"
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:textSize="18sp"
+            android:text="@string/forgot_pass_info"
+            android:lines="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/dni_input"
+            android:id="@+id/token_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
-            android:hint="DNI"
+            android:hint="Código"
             android:inputType="number"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image" />
+            app:layout_constraintTop_toBottomOf="@+id/info" />
 
         <TextView
-            android:id="@+id/dni_error"
+            android:id="@+id/token_error"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -49,20 +50,20 @@
             android:textColor="#F80D0D"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dni_input" />
+            app:layout_constraintTop_toBottomOf="@+id/token_input" />
 
         <EditText
             android:id="@+id/password_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
-            android:hint="Contraseña"
+            android:hint="Nueva contraseña"
             android:inputType="textPassword"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dni_input" />
+            app:layout_constraintTop_toBottomOf="@+id/token_input" />
 
         <TextView
             android:id="@+id/password_error"
@@ -75,49 +76,41 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_input" />
 
+        <EditText
+            android:id="@+id/repeat_password_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:hint="Repetir nueva contraseña"
+            android:inputType="textPassword"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_input" />
+
         <TextView
-            android:id="@+id/forget_password_btn"
+            android:id="@+id/repeat_password_error"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:paddingVertical="10dp"
-            android:text="@string/forget_password_link"
-            android:textColor="#03A9F4"
-            android:textSize="14sp"
-            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
+            android:textColor="#F80D0D"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/password_error" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/repeat_password_input" />
 
         <Button
-            android:id="@+id/login_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="60dp"
-            android:background="@color/colorPrimary"
-            android:text="INGRESAR"
-            android:textColor="@color/white"
-            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <TextView
             android:id="@+id/sign_in_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginBottom="15dp"
-            android:padding="10dp"
-            android:text="@string/register_link"
-            android:textAlignment="center"
-            android:textColor="#03A9F4"
-            android:textSize="14sp"
-            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
+            android:background="@color/colorPrimary"
+            android:text="CONFIRMAR"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -125,8 +118,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
