--- a/app/src/main/res/layout/health_service_item.xml
+++ b/app/src/main/res/layout/health_service_item.xml
@@ -14,7 +14,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="105dp"
         android:layout_margin="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,6 +37,30 @@
                 tools:text="Hospital posadas" />
 
             <TextView
+                android:id="@+id/service_distance"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="10km"
+                android:textSize="16sp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/address_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Dirección:"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/service_name" />
+
+            <TextView
                 android:id="@+id/service_address"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -45,10 +69,36 @@
                 android:layout_marginRight="10dp"
                 android:text="@{service.address}"
                 android:textSize="16sp"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/address_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/service_name"
                 tools:text="Av. Paseo Colon 290" />
+
+            <TextView
+                android:id="@+id/phone_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Teléfono:"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/service_address" />
+
+            <TextView
+                android:id="@+id/service_phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="1122223333"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toRightOf="@id/phone_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/service_address"
+                tools:text="1122223333" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
