--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -9,13 +9,13 @@
 
         <variable
             name="viewModel"
-            type="com.example.admin.screens.forgot_password.ForgotPasswordViewModel" />
+            type="com.example.admin.screens.forgot_password.EmailViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.forgot_password.ForgotPasswordActivity">
+        tools:context=".screens.forgot_password.EmailActivity">
 
         <TextView
             android:id="@+id/info"
@@ -25,27 +25,27 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
             android:textSize="18sp"
-            android:text="@string/forgot_pass_info"
+            android:text="@string/email_info"
             android:lines="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/token_input"
+            android:id="@+id/mail_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
-            android:hint="Código"
-            android:inputType="number"
+            android:hint="Mail"
+            android:inputType="textEmailAddress"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info" />
 
         <TextView
-            android:id="@+id/token_error"
+            android:id="@+id/mail_error"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -53,55 +53,20 @@
             android:textColor="#F80D0D"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/token_input" />
+            app:layout_constraintTop_toBottomOf="@+id/mail_input" />
 
-        <EditText
-            android:id="@+id/password_input"
+        <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
-            android:hint="Nueva contraseña"
-            android:inputType="textPassword"
+            android:textSize="18sp"
+            android:text="@string/email_code_info"
+            android:lines="2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/token_input" />
-
-        <TextView
-            android:id="@+id/password_error"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:textColor="#F80D0D"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_input" />
-
-        <EditText
-            android:id="@+id/repeat_password_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="15dp"
-            android:hint="Repetir nueva contraseña"
-            android:inputType="textPassword"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_input" />
-
-        <TextView
-            android:id="@+id/repeat_password_error"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:textColor="#F80D0D"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/repeat_password_input" />
+            app:layout_constraintTop_toBottomOf="@id/mail_error" />
 
         <Button
             android:id="@+id/confirm_btn"
@@ -112,7 +77,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="15dp"
             android:background="@color/colorPrimary"
-            android:text="CONFIRMAR"
+            android:text="ENVIAR CÓDIGO"
             android:textColor="@color/white"
             android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
