--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -39,7 +39,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
             android:hint="Código"
-            android:inputType="number"
+            android:inputType="text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info" />
