--- a/app/src/main/res/layout/health_service_item.xml
+++ b/app/src/main/res/layout/health_service_item.xml
@@ -14,12 +14,13 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="105dp"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="15dp">
 
             <TextView
                 android:id="@+id/service_name"
