Add map section in health services

--- a/app/src/main/res/layout/health_service_item.xml
+++ b/app/src/main/res/layout/health_service_item.xml
@@ -94,12 +94,38 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:text="1122223333"
+                android:text="@{service.telephone}"
                 android:textSize="16sp"
                 app:layout_constraintLeft_toRightOf="@id/phone_label"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/service_address"
                 tools:text="1122223333" />
+
+            <TextView
+                android:id="@+id/mail_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Mail:"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/service_phone" />
+
+            <TextView
+                android:id="@+id/service_mail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@{service.mail}"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toRightOf="@id/mail_label"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/service_phone"
+                tools:text="mail@test.com" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
