--- a/app/src/main/res/layout/activity_authorizations.xml
+++ b/app/src/main/res/layout/activity_authorizations.xml
@@ -57,7 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:text="@string/empty_info"
+                android:text="@string/empty_auths"
                 android:lines="2"
                 android:textAlignment="center"
                 app:layout_constraintTop_toBottomOf="@+id/empty_title"
