--- a/app/src/main/res/layout/activity_authorizations.xml
+++ b/app/src/main/res/layout/activity_authorizations.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:text="¡Ups!"
+                android:text="@string/empty_auths_title"
                 android:textAlignment="center"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
