Update logos and auth item

--- a/app/src/main/res/layout/authorization_item.xml
+++ b/app/src/main/res/layout/authorization_item.xml
@@ -30,7 +30,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:text="@{authorization.title}"
+                app:bindAuthName="@{authorization}"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
